objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the program is active or not.</description>
        <inlineHelpText>Used to indicate if the program is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Days__c</fullName>
        <description>Duration can be used as an override should a program not have definitive start/end date and run 30 days, 90 days, etc.</description>
        <inlineHelpText>Duration can be used as an override should a program not have definitive start/end date and run 30 days, 90 days, etc.</inlineHelpText>
        <label>Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Used to store the end date of program.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to store the end date of program.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Used to capture end date of program.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to capture end date of program.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Eligibility_Criteria__c</fullName>
        <description>Actually takes the filter logic</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Eligibility Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Formula__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Formula</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Program_Monitoring_Criteria__c</fullName>
        <description>Filters rule assignment records which are checked for monitoring</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Monitoring Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Rule_Logic_Monitoring__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Rule Logic Monitoring</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Rule_Logic__c</fullName>
        <description>User to enter the field logic criteria</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Rule Logic Eligibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Contact__c</fullName>
        <description>Used to find the sales team member for this Program</description>
        <inlineHelpText>Used to find the sales team member for this Program</inlineHelpText>
        <label>Sales Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IST_Account_Owner__c</fullName>
                    <label>Account Manager</label>
                </value>
                <value>
                    <fullName>OwnerId</fullName>
                    <label>Territory Manager</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Used to capture start date of program.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to capture start date of program.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to capture current status program.</description>
        <inlineHelpText>Used to capture current status program.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Not eligible</fullName>
                </value>
                <value>
                    <fullName>In/under review by IST (use pre and post pending customer response)</fullName>
                </value>
                <value>
                    <fullName>Pending customer response (pending app completion) -In/under review by IST</fullName>
                </value>
                <value>
                    <fullName>Waiting on POA (manually updated by IST)</fullName>
                </value>
                <value>
                    <fullName>Verified by IST (manually updated by IST)</fullName>
                </value>
                <value>
                    <fullName>Under review by TM under review by RSD approved Rejected [with reasons] (do not call removes from eligibility)</fullName>
                </value>
                <value>
                    <fullName>TM will be reaching out to you soon Enrolled (start date)</fullName>
                </value>
                <value>
                    <fullName>Active (initiated at first sale)</fullName>
                </value>
                <value>
                    <fullName>Remove (for performance)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>